[project]
name = "wrathfuladamw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "mypy>=2.1.0",
    "ruff>=0.15.16"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
# ROCm support relies on both Triton packages, which should also be installed from
# the PyTorch index (and included in `project.dependencies`).
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff.lint]
extend-ignore = ["E501","PLR0913", "PLR2004", "PLR2004", "PLR0912", "PLW2901", "COM812"]
extend-select = [
  "UP",   # pyupgrade
  "D",    # pydocstyle
  "I",    # isort
  "E",    # flake8-errors
  "W",    # flake8-warnings
  "Q",    # flake8-quotes
  "F",    # flake8-pyflakes
  "A",    # flake8-builtins
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "S",    # flake8-bandit
  "RSE",  # flake8-raise
  "BLE",  # flake8-blind-except
  "T10",  # flake8-debugger
  "SIM",  # flake8-simplify
  "EM",   # flake8-errmsg
  "T20",  # flake8-print # only in prod
  "FBT",  # flake8-boolean-trap # only in prod
  "COM",  # flake8-commas
  "DTZ",  # flake8-datetimez
  "FIX",  # flake8-fixme
  "INT",  # flake8-gettext
  "FA",   # flake8-future-annotations
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "INP",  # flake8-no-pep420
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "RET",  # flake8-return
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "TID",  # flake8-tidy-imports
  "TC",   # flake8-type-checking
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "N",    # pep8-naming
  "PGH",  # pygrep-hooks
  "TRY",  # tryceratops
  "FLY",  # flynt
  "C90",  # mccabe
  #"DOC",  # pydoclint  # warning: Selection `DOC` has no effect because preview is not enabled.
  "PD",   # pandas-vet
  "PL",   # Pylint
  "RUF",  # Ruff
  "ERA",  # eradicate
  "PERF", # Perflint
  "FURB", # refurb
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
  "ANN003", # missing type annotation for **kwargs
  "D101", # missing doc string in public class
  "D103", # missing doc string in public func
  "S101" # using asserts
  ]

[lint.flake8-bandit]
check-typed-exception = true # Проверка типизированных исключений

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
skip-magic-trailing-comma = false # Как в black уважать магические заверщающие запятве
line-ending = "auto" # Как в black автоматически определять подходящие окончания
